--add-opens java.base/java.math=ALL-UNNAMED